# Brod

./: Cargo.toml  README.md
examples/: async_pool_performance.rs  async_producer_performance.rs  basic_async_producer.rs  basic_sync_producer.rs  sync_macro.rs  sync_macro_performance.rs  sync_pool_performance.rs  sync_producer_performance.rs  sync_producer_pool.rs  type_erased_sync_producer.rs
src/: async_prod.rs  lib.rs  macro_sync_prod.rs  prod_utils.rs  producerpool.rs  sync_prod.rs
