[package]
name = "kafkaesque"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
rdkafka = { version = "0.25", features = ["cmake-build"] }
tokio = {version = "1.28.0", features = ["full"]}
pretty_env_logger = "0.4.0"
tokio-test = "0.4.2" 