[package]
name = "brod"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A wrapper library providing an API for executing Kafka producers in parallel."
homepage = "https://github.com/suarvid/Brod"
repository = "https://github.com/suarvid/Brod"
readme = "README.md"
keywords = ["kafka", "producer", "parallel", "tokio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
rdkafka = { version = "0.25", features = ["cmake-build"] }
tokio = {version = "1.28.0", features = ["full"]}
pretty_env_logger = "0.4.0"
tokio-test = "0.4.2" 